[FIX] fix bug room select not same

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
+    "portal-vue": "^2.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
