--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,3 +6,10 @@ jobs:
     steps:
       - checkout # check out the code in the project directory
       - run: echo "hello world" # run the `echo` command
+      - add_ssh_keys: 
+          fingerprints: 
+            - "15:a2:44:92:9c:e8:5b:4c:de:8c:ec:c1:ec:19:eb:e8"
+      - run: 
+          name: Get inside VM
+          command: ssh -o StrictHostKeyChecking=no int222@52.163.87.230
+                   "ls -la ;"
